# VideoPlayer

./: README.md
app/: build.gradle  readme
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  JavaCallHelper.cpp  JavaCallHelper.h  Log.h  VideoChannel.cpp  VideoChannel.h  VideoPlayer.cpp  VideoPlayer.h  native-lib.cpp  safe_queue.h
app/src/main/java/com/example/testvideo/: MainActivity.java  VideoPlayer.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
